# usim-mqttf-fquik

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: deploy-pages.yml
data/src/main/assets/: changelog.json
data/src/main/assets/emojis/: vi.json  zh_Hant.json
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.css
docs/en/: index.md
docs/en/guide/: architecture.md  build.md  configuration.md  getting-started.md  message-flow.md  running.md  security.md
docs/guide/: architecture.md  build.md  configuration.md  getting-started.md  message-flow.md  running.md  security.md
docs/zh/: index.md
docs/zh/guide/: architecture.md  build.md  configuration.md  getting-started.md  message-flow.md  running.md  security.md
fengni-bridge/: build.gradle
fengni-bridge/libs/: fengni-HiveMQ-release.aar
fengni-bridge/src/main/: AndroidManifest.xml
fengni-bridge/src/main/res/layout/: fengni_config_import_activity.xml
fengni-bridge/src/main/res/values/: strings.xml
fengni-bridge/tools/: generate-fengni-deployment.ps1
presentation/: build.gradle  proguard-rules.pro
presentation/src/main/: AndroidManifest.xml
presentation/src/main/res/drawable/: ic_regex_24px.xml
presentation/src/main/res/layout/: about_controller.xml  drawer_view.xml  main_activity.xml  message_content_filter_list_item.xml  settings_controller.xml
presentation/src/main/res/values-ar/: strings.xml
presentation/src/main/res/values-bg/: strings.xml
proxy/: Cargo.toml
proxy/src/: lib.rs
(+57 files in other folders)
